# omnicam

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  publish.sh  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/omnicam/: __init__.py  base_camera.py  cv_camera_base.py  file_capture.py  gazebo_camera.py  gstreamer_capture.py  internet_capture.py  pi_camera.py  readonly_camera.py  screen_capture.py  simple_camera.py
tests/: github_test.py
